--- a/_posts/2017-01-20-Lab-0.markdown
+++ b/_posts/2017-01-20-Lab-0.markdown
@@ -5,6 +5,7 @@ date:   2017-01-16
 category: lab
 description: >
     En este laboratorio van a verificar si tienen las "habilidades" necesarias de programación para este curso. Crearan una cuenta de github, aprenderán a utilizar git y realizarán unos ejercicios en Java.
+permalink: /:categories/:title.html
 ---
 
 #### Empezando
