--- a/_posts/2017-01-27-Lab-1.markdown
+++ b/_posts/2017-01-27-Lab-1.markdown
@@ -11,28 +11,25 @@ permalink: /:categories/:title.html
 
 #### Empezando
 
-Para este laboratorio, vamos a **_clonar_** los repositorios con lor archivos que vamos a utilizar, y una vez clonados, vamos a cambiar la 
-direccion URL para poder hacer push en su repositorio personal. Lo primero que debemos hacer es ejecutar el siguiente comando:
+Antes de iniciar, hay unas recomendaciones que debemos darles. Si ustedes estan usando la maquina virtual de CCII, tomen en cuenta que varios alumnos de otras 
+secciones utilizan las mismas computadoras, asi que para evitar inconvenientes, <b>deben borrar todos los archivos en los que trabajaron y cerrar su cuenta de GitHub antes 
+de salir del laboratorio</b>.
+
+Regresando al tema, para este laboratorio, vamos a empezar a utilizar GitHub Classroom. GitHub Classroom nos permitira mantener un mejor control de sus repositorios. Para acceder a el, 
+deben hacer click en este <a href="https://classroom.github.com/assignment-invitations/a6436788a1586af7547e3c2aae38eb66">link</a>. Luego de que acepten la invitación a Classroom, les saldrá
+el siguiente mensaje:
+
+[![GitHub Classroom](/assets/img/labs/lab1_classroom.png)](/assets/img/labs/lab1_classroom.png)
+
+Una vez hayan aceptado, pueden proceder a clonar su repositorio:
+
+ Lo primero que debemos hacer es ejecutar el siguiente comando:
 
 ```shell
-~ $ git clone https://github.com/cc-3/lab1.git
+~ $ git clone https://github.com/cc-3/lab01-su_usuario.git
 ```
 
-Ahora que han descargado el repositorio con todos los archivos; deben cambiar la URL remota para poder hacer push a su repositorio. Claro, antes de
-esto, deben ingresar a su cuenta de **_GitHub_** como lo vimos en el laboratorio anterior, crear un nuevo repositorio llamado **_lab1_** y 
-copiar la dirección URL que se genera. Una vez tengan esa dirección, ingresan a la carpeta **_lab1_** y ejecutan el siguiente comando:
-
-```shell
-~ $ git remote set-url origin su_nueva_url
-```
-
-Y pueden comprobar los cambios de la siguiente forma:
-
-```shell
-~ $ git remote -v
-```
-
-Deberia aparecerles la direccion de su repositorio personal en fetch y push.
+Ya que se hayan descargado todos los archivos, estaran listos para empezar a trabajar.
 
 ***
 
@@ -223,5 +220,5 @@ Recuerden hacer commit al terminar, y subir su respuesta final a GitHub:
 ~ $ git commit -m "Laboratorio 1 terminado"
 ~ $ git push origin master
 ```
-Y lo mas  importante, agreguen a **_cc3-grades_** como contribuidor al repositorio, de lo contrario no podremos calificar su laboratorio y
-tendran <b>0</b> en la nota. Finalmente, suban el link del repositorio al **_GES_**, esto tambien es necesario que les pongamos nota.
+Finalmente, suban el link del repositorio al **_GES_**, esto tambien es necesario que les pongamos nota. Tomen en cuenta que <b>deben subir el repositorio a GitHub y el link al GES</b>,
+esto no es opcional, es un requerimiento para que pongamos nota.
