--- a/_posts/2017-02-01-Proyecto-1-c.markdown
+++ b/_posts/2017-02-01-Proyecto-1-c.markdown
@@ -115,10 +115,10 @@ Como todos sabemos los editores de texto tienen varias funcionalidades, pero com
 
 #### Funciones a Implementar
 
-* Abrir un archivo existente (easy peasy)
-* Crear un archivo nuevo (easy)
-* Guarda el archivo actual (medium)
-* Modificar texto (hard)
+* Abrir un archivo existente (**easy peasy**)
+* Crear un archivo nuevo (**easy**)
+* Guarda el archivo actual (**medium**)
+* Modificar texto (**hard**)
 
 #### Especificaciones:
 
